# spacy_readability

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
spacy_readability/: __init__.py  about.py  words.py
tests/: books.py  test_books.py  test_readability.py
tests/samples/: peter_rabbit.json  tale_of_two_cities.json
